# Copyright (C) 2019. Huawei Technologies Co., Ltd. All rights reserved.

import("//build/harmonyos.gni")

harmonyos_shared_library("iniparser") {
    sources = [
        "src/iniparser.c",
        "src/dictionary.c",
    ]
    include_dirs = [
        "src",
    ]
    subsystem_name = "communication"
}
